--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>parent</name>
+    <name>RollingUpgrades</name>
     <url>https://github.com/jgroups-extras/RollingUpgrades</url>
 
     <modules>
@@ -14,7 +14,7 @@
     </modules>
 
     <description>
-        Rolling upgrades for an Infinispan/JDG/JGroups cluster
+        Rolling upgrades of a JGroups cluster
     </description>
 
     <organization>
