--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,29 +9,20 @@
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>relay-server</artifactId>
+   <artifactId>common</artifactId>
    <packaging>jar</packaging>
-   <name>RelayServer</name>
-   <description>RelayServer</description>
+   <name>common</name>
+   <description>Common functionality</description>
 
-   <properties>
-      <module.skipComponentMetaDataProcessing>false</module.skipComponentMetaDataProcessing>
-      <module.skipTestComponentMetaDataProcessing>false</module.skipTestComponentMetaDataProcessing>
-   </properties>
    <dependencies>
       
-     <dependency>
+      <!--<dependency>
          <groupId>org.jgroups.rolling-upgrades</groupId>
-         <artifactId>common</artifactId>
+         <artifactId>parent</artifactId>
          <version>${project.version}</version>
-      </dependency>
+      </dependency>-->
 
-      <dependency>
-         <groupId>org.jgroups</groupId>
-         <artifactId>jgroups</artifactId>
-         <version>${version.jgroups}</version>
-      </dependency>
-      
    </dependencies>
+
 
 </project>
