--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>https://github.com/jgroups-extras/RollingUpgrades</url>
 
     <modules>
+        <module>common</module>
         <module>relay-server</module>
         <module>jgroups-4.x</module>
     </modules>
