--- a/jgroups-4.x/pom.xml
+++ b/jgroups-4.x/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
       <artifactId>parent</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${my.version}</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
