--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.jgroups.rolling-upgrades</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${my.version}</version>
     <packaging>pom</packaging>
     <name>RollingUpgrades</name>
     <url>https://github.com/jgroups-extras/RollingUpgrades</url>
@@ -14,7 +14,21 @@
         <module>jgroups-4.x</module>
     </modules>
 
-    <!--localRepository>/home/bela/.m2/jboss-repository</localRepository-->
+    <properties>
+        <my.version>1.0.0.Final</my.version>
+        <version.jgroups>4.0.11.Final</version.jgroups>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <!-- nexus-staging-maven-plugin -->
+        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        <nexus.server.id>jboss-releases-repository</nexus.server.id>
+        <nexus.server.url>https://repository.jboss.org/nexus</nexus.server.url>
+        <nexus.snapshot.server.id>jboss-snapshots-repository</nexus.snapshot.server.id>
+        <nexus.snapshot.server.url>https://repository.jboss.org/nexus/content/repositories/snapshots/
+        </nexus.snapshot.server.url>
+    </properties>
+
 
     <description>
         Rolling upgrades of a JGroups cluster
@@ -52,20 +66,6 @@
         <tag>master</tag>
     </scm>
 
-
-    <properties>
-        <version.jgroups>4.0.10.Final</version.jgroups>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-
-        <!-- nexus-staging-maven-plugin -->
-        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-        <nexus.server.id>jboss-releases-repository</nexus.server.id>
-        <nexus.server.url>https://repository.jboss.org/nexus</nexus.server.url>
-        <nexus.snapshot.server.id>jboss-snapshots-repository</nexus.snapshot.server.id>
-        <nexus.snapshot.server.url>https://repository.jboss.org/nexus/content/repositories/snapshots/
-        </nexus.snapshot.server.url>
-    </properties>
 
 
     <distributionManagement>
