--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
       <artifactId>parent</artifactId>
-      <version>${my.version}</version>
+      <version>1.0.0.Final</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
