--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.jgroups.rolling-upgrades</groupId>
     <artifactId>parent</artifactId>
-    <version>${my.version}</version>
+    <version>1.0.0.Final</version>
     <packaging>pom</packaging>
     <name>RollingUpgrades</name>
     <url>https://github.com/jgroups-extras/RollingUpgrades</url>
@@ -15,7 +15,6 @@
     </modules>
 
     <properties>
-        <my.version>1.0.0.Final</my.version>
         <version.jgroups>4.0.11.Final</version.jgroups>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
