--- a/relay-server/pom.xml
+++ b/relay-server/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
       <artifactId>parent</artifactId>
-      <version>${my.version}</version>
+      <version>1.0.0.Final</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
@@ -34,7 +34,7 @@
       
    </dependencies>
 
-    <!-- Generates the ueber JAR for RelayServer plus dependencies -->
+    <!-- Generates the uberjar for RelayServer plus dependencies -->
     <build>
         <plugins>
             <plugin>
