Moved jgroups-4.x to jgroups-4 and jgroups-3.6 to jgroups-36 (apparently stupid mvn doesn't recognize module names with dots)

--- a/jgroups-4/pom.xml
+++ b/jgroups-4/pom.xml
@@ -9,9 +9,9 @@
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>jgroups-4.x</artifactId>
+   <artifactId>jgroups-4</artifactId>
    <packaging>jar</packaging>
-   <name>jgroups-4.x</name>
+   <name>jgroups-4</name>
    <description>Protocol for JGroups 4.x</description>
 
     <properties>
