- Renamed RELAY3 -> UPGRADE (https://github.com/jgroups-extras/RollingUpgrades/issues/5)

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <modules>
         <module>common</module>
-        <module>relay-server</module>
+        <module>upgrade-server</module>
         <module>jgroups-4</module>
         <module>jgroups-36</module>
     </modules>
@@ -117,17 +117,17 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
-            <version>1.9.0</version>
+            <version>1.31.1</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>1.9.0</version>
+            <version>1.31.1</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>1.9.0</version>
+            <version>1.31.1</version>
         </dependency>
 
     </dependencies>
@@ -140,7 +140,7 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.5.0.Final</version>
+                <version>1.6.2</version>
             </extension>
         </extensions>
 
@@ -181,7 +181,7 @@
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>0.5.1</version>
+                <version>0.6.1</version>
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
@@ -200,6 +200,11 @@
 
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
