- Fixed issue with javax.annotation.Metadata not being found - Changed UPGRADE to compile (not yet correctly using 5) - Changed version to 1.1.0 - Added chat-5.sh - JGroups 5 messages are converted by a byte array, and metadata about the message type is added. On the receiver side, if we're a 5 system, the metadata is used to construct the correct message type, otherwise, we simply parse the payload as a byte array (https://github.com/jgroups-extras/RollingUpgrades/issues/4) - Changed UPGRADE in module jgroups-5 to send the byte array with BytesMessages instead of calling msg.writePayload() (https://github.com/jgroups-extras/RollingUpgrades/issues/4)

--- a/jgroups-5/pom.xml
+++ b/jgroups-5/pom.xml
@@ -9,14 +9,14 @@
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>jgroups-36</artifactId>
+   <artifactId>jgroups-5</artifactId>
    <packaging>jar</packaging>
-   <name>jgroups-36</name>
-   <description>Protocol for JGroups 3.6</description>
+   <name>jgroups-5</name>
+   <description>Protocol for JGroups 5.x</description>
 
-    <properties>
-        <version.jgroups>3.6.15.Final</version.jgroups>
-    </properties>
+   <properties>
+      <version.jgroups>5.0.2.Final</version.jgroups>
+   </properties>
 
    <dependencies>
       
