--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.jgroups.rolling-upgrades</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.0.Final</version>
+    <version>1.1.0.Final</version>
     <packaging>pom</packaging>
     <name>RollingUpgrades</name>
     <url>https://github.com/jgroups-extras/RollingUpgrades</url>
@@ -11,8 +11,9 @@
     <modules>
         <module>common</module>
         <module>upgrade-server</module>
-        <module>jgroups-4</module>
         <module>jgroups-36</module>
+        <module>jgroups-4</module>
+        <module>jgroups-5</module>
     </modules>
 
     <properties>
@@ -128,6 +129,12 @@
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
             <version>1.31.1</version>
+        </dependency>
+        <!-- Kludge to find javax.annotation.Generated in the protobuf-generated files (should be temporary) -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
 
     </dependencies>
