--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.jgroups.rolling-upgrades</groupId>
     <artifactId>parent</artifactId>
-    <version>1.1.0.Final</version>
+    <version>1.1.0.Final-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>RollingUpgrades</name>
     <url>https://github.com/jgroups-extras/RollingUpgrades</url>
