--- a/jgroups-5/pom.xml
+++ b/jgroups-5/pom.xml
@@ -15,7 +15,9 @@
    <description>Protocol for JGroups 5.x</description>
 
    <properties>
-      <version.jgroups>5.0.2.Final</version.jgroups>
+      <version.jgroups>5.1.3.Final</version.jgroups>
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
    </properties>
 
    <dependencies>
