Changed MessageDispatcherTest in 3 and 4 to use protobuf, added unit tests to common

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,5 +14,14 @@
    <name>common</name>
    <description>Common functionality</description>
 
+   <dependencies>
+      <dependency>
+         <groupId>org.testng</groupId>
+         <artifactId>testng</artifactId>
+         <version>6.14.3</version>
+         <scope>test</scope>
+      </dependency>
+   </dependencies>
+
 
 </project>
