--- a/upgrade-server/pom.xml
+++ b/upgrade-server/pom.xml
@@ -2,37 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <parent>
-      <groupId>org.jgroups.rolling-upgrades</groupId>
-      <artifactId>parent</artifactId>
-      <version>1.1.1.Final-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
-   </parent>
+    <parent>
+        <groupId>org.jgroups.rolling-upgrades</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.1.1.Final-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-   <artifactId>upgrade-server</artifactId>
-   <packaging>jar</packaging>
-   <name>UpgradeServer</name>
-   <description>UpgradeServer</description>
+    <artifactId>upgrade-server</artifactId>
+    <packaging>jar</packaging>
+    <name>UpgradeServer</name>
+    <description>UpgradeServer</description>
 
-   <properties>
-      <module.skipComponentMetaDataProcessing>false</module.skipComponentMetaDataProcessing>
-      <module.skipTestComponentMetaDataProcessing>false</module.skipTestComponentMetaDataProcessing>
-   </properties>
-   <dependencies>
+    <properties>
+        <netty.tcnative.version>2.0.36.Final</netty.tcnative.version>
+        <module.skipComponentMetaDataProcessing>false</module.skipComponentMetaDataProcessing>
+        <module.skipTestComponentMetaDataProcessing>false</module.skipTestComponentMetaDataProcessing>
+    </properties>
+    <dependencies>
       
-     <dependency>
-         <groupId>org.jgroups.rolling-upgrades</groupId>
-         <artifactId>common</artifactId>
-         <version>${project.version}</version>
-      </dependency>
-       <dependency>
-           <groupId>io.netty</groupId>
-           <artifactId>netty-tcnative</artifactId>
-           <version>2.0.32.Final</version>
+        <dependency>
+            <groupId>org.jgroups.rolling-upgrades</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-       </dependency>
-
-   </dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative</artifactId>
+            <version>${netty.tcnative.version}</version>
+            <classifier>${os.detected.classifier}</classifier>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 
     <!-- Generates the uberjar for UpgradeServer plus dependencies -->
     <build>
