--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,15 +4,15 @@
 
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
-      <artifactId>parent</artifactId>
+      <artifactId>jgroups-upgrade-parent</artifactId>
       <version>1.1.1.Final-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>common</artifactId>
+   <artifactId>jgroups-upgrade-commons</artifactId>
    <packaging>jar</packaging>
-   <name>common</name>
-   <description>Common functionality</description>
+   <name>JGroups Rolling Upgrade commons</name>
+   <description>JGroups Rolling Upgrade commons</description>
 
    <dependencies>
       <dependency>
@@ -22,6 +22,4 @@
          <scope>test</scope>
       </dependency>
    </dependencies>
-
-
 </project>
