--- a/jgroups-36/pom.xml
+++ b/jgroups-36/pom.xml
@@ -4,15 +4,15 @@
 
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
-      <artifactId>parent</artifactId>
+      <artifactId>jgroups-upgrade-parent</artifactId>
       <version>1.1.1.Final-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>jgroups-36</artifactId>
+   <artifactId>jgroups36-upgrade</artifactId>
    <packaging>jar</packaging>
-   <name>jgroups-36</name>
-   <description>Protocol for JGroups 3.6</description>
+   <name>JGroups 3.6.x UPGRADE protocol</name>
+   <description>JGroups 3.6.x UPGRADE protocol for Rolling Upgrades</description>
 
     <properties>
         <version.jgroups>3.6.15.Final</version.jgroups>
@@ -22,7 +22,7 @@
       
       <dependency>
          <groupId>org.jgroups.rolling-upgrades</groupId>
-         <artifactId>common</artifactId>
+         <artifactId>jgroups-upgrade-commons</artifactId>
          <version>${project.version}</version>
       </dependency>
 
