--- a/jgroups-4/pom.xml
+++ b/jgroups-4/pom.xml
@@ -4,15 +4,15 @@
 
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
-      <artifactId>parent</artifactId>
+      <artifactId>jgroups-upgrade-parent</artifactId>
       <version>1.1.1.Final-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>jgroups-4</artifactId>
+   <artifactId>jgroups4-upgrade</artifactId>
    <packaging>jar</packaging>
-   <name>jgroups-4</name>
-   <description>Protocol for JGroups 4.x</description>
+   <name>JGroups 4.x UPGRADE protocol</name>
+   <description>JGroups 4.x UPGRADE protocol for Rolling Upgrades</description>
 
    <properties>
       <version.jgroups>4.2.12.Final</version.jgroups>
@@ -22,7 +22,7 @@
       
       <dependency>
          <groupId>org.jgroups.rolling-upgrades</groupId>
-         <artifactId>common</artifactId>
+         <artifactId>jgroups-upgrade-commons</artifactId>
          <version>${project.version}</version>
       </dependency>
 
