--- a/jgroups-5/pom.xml
+++ b/jgroups-5/pom.xml
@@ -4,15 +4,15 @@
 
    <parent>
       <groupId>org.jgroups.rolling-upgrades</groupId>
-      <artifactId>parent</artifactId>
+      <artifactId>jgroups-upgrade-parent</artifactId>
       <version>1.1.1.Final-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>jgroups-5</artifactId>
+   <artifactId>jgroups5-upgrade</artifactId>
    <packaging>jar</packaging>
-   <name>jgroups-5</name>
-   <description>Protocol for JGroups 5.x</description>
+   <name>JGroups 5.x UPGRADE protocol</name>
+   <description>JGroups 5.x UPGRADE protocol for Rolling Upgrades</description>
 
    <properties>
       <version.jgroups>5.1.9.Final</version.jgroups>
@@ -24,7 +24,7 @@
       
       <dependency>
          <groupId>org.jgroups.rolling-upgrades</groupId>
-         <artifactId>common</artifactId>
+         <artifactId>jgroups-upgrade-commons</artifactId>
          <version>${project.version}</version>
       </dependency>
 
