--- a/upgrade-server/pom.xml
+++ b/upgrade-server/pom.xml
@@ -4,15 +4,15 @@
 
     <parent>
         <groupId>org.jgroups.rolling-upgrades</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>jgroups-upgrade-parent</artifactId>
         <version>1.1.1.Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>upgrade-server</artifactId>
+    <artifactId>jgroups-upgrade-server</artifactId>
     <packaging>jar</packaging>
-    <name>UpgradeServer</name>
-    <description>UpgradeServer</description>
+    <name>JGroups Upgrade Server</name>
+    <description>JGroups Upgrade Server for Rolling Upgrades</description>
 
     <properties>
         <netty.tcnative.version>2.0.36.Final</netty.tcnative.version>
@@ -23,7 +23,7 @@
       
         <dependency>
             <groupId>org.jgroups.rolling-upgrades</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>jgroups-upgrade-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
 
