Organize pom.xml files
* Declare all dependencies in parent pom.xml
* Configure protoc plugin in parent pom.xml
* Enable protoc plugin only for common pom.xml

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -24,6 +24,7 @@
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
             <version>4.2.16.Final</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
