- Added RelayDemo/Base - Added support for Relay2Header (issue 19) - Support for Relay2Header (https://github.com/jgroups-extras/RollingUpgrades/issues/19)

--- a/jgroups-4/pom.xml
+++ b/jgroups-4/pom.xml
@@ -15,7 +15,7 @@
    <description>JGroups 4.x UPGRADE protocol for Rolling Upgrades</description>
 
    <properties>
-      <version.jgroups>4.2.12.Final</version.jgroups>
+      <version.jgroups>4.2.18.Final-SNAPSHOT</version.jgroups>
    </properties>
 
    <dependencies>
