--- a/jgroups-4/pom.xml
+++ b/jgroups-4/pom.xml
@@ -38,6 +38,22 @@
          <artifactId>jgroups</artifactId>
          <version>${version.jgroups}</version>
       </dependency>
+
+
+      <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-core</artifactId>
+         <version>2.14.1</version>
+         <optional>true</optional>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-api</artifactId>
+         <version>2.14.1</version>
+         <optional>true</optional>
+      </dependency>
+
+
       
    </dependencies>
 
