--- a/jgroups-5/pom.xml
+++ b/jgroups-5/pom.xml
@@ -39,7 +39,23 @@
          <artifactId>jgroups</artifactId>
          <version>${version.jgroups}</version>
       </dependency>
-      
+
+
+      <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-core</artifactId>
+         <version>2.14.1</version>
+         <optional>true</optional>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-api</artifactId>
+         <version>2.14.1</version>
+         <optional>true</optional>
+      </dependency>
+
+
+
    </dependencies>
 
 
