--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <testng.version>6.14.3</testng.version>
         <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
         <javax-annotation.version>1.3.2</javax-annotation.version>
+        <log4j.version>2.14.1</log4j.version>
     </properties>
 
 
@@ -147,6 +148,16 @@
                 <artifactId>testng</artifactId>
                 <version>${testng.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
