--- a/jgroups-4/pom.xml
+++ b/jgroups-4/pom.xml
@@ -15,7 +15,7 @@
    <description>JGroups 4.x UPGRADE protocol for Rolling Upgrades</description>
 
    <properties>
-      <version.jgroups>4.2.18.Final-SNAPSHOT</version.jgroups>
+      <version.jgroups>4.2.18.Final</version.jgroups>
    </properties>
 
    <dependencies>
