--- a/jgroups-5/pom.xml
+++ b/jgroups-5/pom.xml
@@ -15,7 +15,7 @@
    <description>JGroups 5.x UPGRADE protocol for Rolling Upgrades</description>
 
    <properties>
-      <version.jgroups>5.2.0.Final-SNAPSHOT</version.jgroups>
+      <version.jgroups>5.2.10.Final</version.jgroups>
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
    </properties>
