--- a/jgroups-5.2/pom.xml
+++ b/jgroups-5.2/pom.xml
@@ -15,7 +15,7 @@
    <description>JGroups 5.2.x UPGRADE protocol for Rolling Upgrades</description>
 
    <properties>
-      <version.jgroups>5.2.18.Final</version.jgroups>
+      <jgroups.version>5.2.18.Final</jgroups.version>
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
    </properties>
@@ -37,22 +37,10 @@
       <dependency>
          <groupId>org.jgroups</groupId>
          <artifactId>jgroups</artifactId>
-         <version>${version.jgroups}</version>
+         <version>${jgroups.version}</version>
+         <scope>provided</scope>
+         <!--optional>true<optional-->
       </dependency>
-
-
-      <dependency>
-         <groupId>org.apache.logging.log4j</groupId>
-         <artifactId>log4j-core</artifactId>
-         <optional>true</optional>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.logging.log4j</groupId>
-         <artifactId>log4j-api</artifactId>
-         <optional>true</optional>
-      </dependency>
-
-
 
    </dependencies>
 
