--- a/base/pom.xml
+++ b/base/pom.xml
@@ -25,6 +25,7 @@
             <artifactId>jgroups</artifactId>
             <version>4.2.18.Final</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
